	* examples/lib: Added qsort()
	* examples/nxflat: Added support for symbol tables
	* Correct logic that creates compiler include paths.  On Cygwin, the
	  include paths for Cygwin-based GCC were being converted to windows
	  native paths.  That causes many problems -- breaking dependencies
	  for one.
	* Fixed an important bug in ROMFS.  The initial XIP offset was set
	  incorrectly so if sector zero was read first, there was a bad read.
	  I don't know how it worked before.
	* arch/arm/src/common/up_use_stack.c.  Fixed a fatal stack setup error.
	  This file has been around for a long time, but I don't think it has
	  every been used before (i.e., prior to the NXFLAT logic)

0.4.10 2009-xx-xx Gregory Nutt <spudmonkey@racsa.co.cr>

	* lib/: Added some basic regex-subset, pattern matching functions
	* lib/: Greatly simplified mktime() and gmtime_r().  The Gregorian and
	  Julian time calculations were interesting, but not necessary in the
	  typical embeddd system.
	* sched/: Added gettimeofday().  This implementation is simply a thin
	  wrapper around clock_gettimer().
	* lib/: Add gmtime(), localtime(), and strftime()
	* binfmt/: Add exec().  This is just a wrapper that executes both
	  load_ and exec_module() in a more familiar manner.  It is not consistent
	  with more standard exec() functions, however, because (1) it returns
	  and (2) it requires symbol table arguments.
	* lib/: Add fileno()
	* examples/ostest: Several of the tests used a big, hard-coded stack size
	  when creating test threads (16Kb stacksize).  The stack size should
	  be controlled by the .config file or the OSTest won't work on platforms
	  with memory constraints.
	* netutils/thttpd: An initial port of Jef Poskanzer's THTTPD HTPPD server.
          See http://acme.com/software/thttpd/.
	* examples/thttpd: A basic test program for THTTPD
	* configs/eagle100/thttpd: A build configuration for THTTPD on the Micromint
	  Eagle-100 LMS6918 (Cortex-M3) board.
