@@ -1498,6 +1498,7 @@ nuttx-0.4.10 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 	* examples/thttpd: A basic test program for THTTPD
 	* configs/eagle100/thttpd: A build configuration for THTTPD on the Micromint
 	  Eagle-100 LMS6918 (Cortex-M3) board.
+	* lib/: Added strstr()
 
 nuttx-0.4.10 2009-xx-xx Gregory Nutt &lt;spudmonkey@racsa.co.cr&gt;
 
